--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Term cards</h1>
+  <h1>Science</h1>
 
   <div class="row">
     <div class="col-lg-4 col-md-6 card">
@@ -24,7 +24,7 @@
         "Blinding" helps reduce biased results.</p>
     </div>
     <div class="col-lg-4 col-md-12 card">
-      <h2 id="h3">Science</h2>
+      <h2 id="h3">Serendipity</h2>
       <p>Serendipity is an unplanned fortunate discovery; is a common occurrence throughout the history of product
         invention and scientific discovery. Serendipity is also seen as a potential design principle for online
         activities that would present a wide array of information and viewpoints, rather than just re-enforcing a user's
