--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -49,7 +49,7 @@
   <div class="container сol-xs-12" id="main-content">
     <h1 class="text-center" id="page-header">Our menu</h1>
     <div id="infocard">
-      <h2>Chicken</h2>
+      <h2 class="text-center">Chicken</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores architecto eos dignissimos ab
         delectus nemo, natus eum adipisci, quidem dolorum iure molestiae a tempora praesentium nihil repellat saepe
         amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores architecto eos dignissimos ab
