--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -47,7 +47,7 @@
     </div><!-- /.container-fluid -->
   </nav>
   <div class="container сol-xs-12" id="main-content">
-    <h1 class="text-center" id="page-header">Our menu</h1>
+    <h1 class="text-center" id="page-header">Our Menu</h1>
     <div id="infocard">
       <h2 class="text-center">Chicken</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores architecto eos dignissimos ab
